Fixed scaling on mobile and added description for web projects

--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,17 @@
     color: var(--textColor);
 }
 
+a {
+    font-weight: 700;
+    text-decoration: none;
+    transition: all 300ms;
+    color: inherit;
+}
+
+a:hover {
+    color: #a177ec;
+}
+
 * {
     box-sizing: border-box;
 }
@@ -81,7 +92,6 @@ section {
 
 section:nth-child(n) {
     flex-direction: row;
-    flex-basis: 50%;
 }
 
 section:nth-child(1) {
@@ -114,7 +124,7 @@ section:nth-child(1) {
     flex-basis: 60%;
 }
 
-.left {
+/* .left {
     transform: translateX(-110%);
 }
 
@@ -125,7 +135,7 @@ section:nth-child(1) {
 .slide-in {
     opacity: 0;
     transition: 5s;
-}
+} */
 
 .active {
     opacity: 1;
@@ -165,13 +175,18 @@ section:nth-child(1) {
 
 .section3 {
     width: 90%;
+    overflow-y: visible;
 }
 
-@media (max-width: 1250px) {
-    /* .test-box {
-        height: 100px;
-        width: 200px;
-    } */
+.section3 .title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.section3 p {
+    width: 100%;
 }
 
 @media (max-width: 850px) {
@@ -179,22 +194,65 @@ section:nth-child(1) {
         flex-direction: column !important;
     }
 
-    .title {
+    .section2 .title {
         flex-basis: 20%;
     }
 
-    .content {
+    .section2 .content {
         flex-basis: 20%;
     }
 
-    .title img {
+    .section2 .title img {
         min-width: 200px;
+    }
+
+    .section3 {
+        flex-direction: column-reverse !important;
+        height: fit-content;
+    }
+
+    .section3 .title {
+        height: fit-content;
+        flex-basis: auto;
+    }
+
+    .section3 .content {
+        height: fit-content;
+    }
+
+    .section3 .content {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .project-grid {
+        height: fit-content;
     }
 }
 
 @media (max-width: 600px) {
     :root {
         font-size: 14px;
+    }
+
+    .section3 {
+        margin: 10rem 0;
+    }
+
+    .project-grid {
+        flex-direction: row;
+        flex-wrap: no-wrap;
+    }
+
+    .project-grid .row {
+        row-gap: 0;
+        flex-direction: column;
+    }
+
+    .test-box {
+        width: 90%;
     }
 }
 
@@ -206,10 +264,22 @@ section:nth-child(1) {
     p {
         width: 90%;
     }
+
+    .project-grid {
+        flex-direction: column;
+    }
+
+    .test-box {
+        width: 40%;
+    }
 }
 
 @media (max-width: 300px) {
     :root {
         font-size: 8px;
+    }
+
+    .test-box {
+        width: 75%;
     }
 }
